# LLMAgentsConstructor

./: .gitignore  CHANGELOG.md  LICENSE  README.md  alembic.ini  pyproject.toml
alembic/: env.py  script.py.mako
alembic/versions/: 202410300427_initial_migration_7d1725c0f14a.py  202411071454_groups_a6b4edcab91e.py  202411090435_initial_revision_cf4fb39e84eb.py
src/: run.py
src/api/: DOCS.md  app.py
src/api/controllers/: __init__.py  agents.py  auth.py  document_templates.py  graphs.py  group_controller.py  group_graphs.py  group_prompts.py  group_providers.py  groups.py  members.py  models.py  nodes.py  prompts.py  provider_tokens.py  providers.py  settings.py  user_controller.py  users.py
src/core/: pipeline.py  system_analyst.py
src/core/agents/: agent_parameters.py  agent_typings.py  base_agent.py
src/db/: create_db.py  database.py  decorators.py
src/db/entities/: __init__.py  agent.py  ai_agent.py  auth_token.py  chat_agent.py  client.py  copying_agent.py  critic_agent.py  document.py  document_template.py  graph.py  graph_group.py  group.py  hard_code_agent.py  input_documents.py  model.py  node.py  prompt.py  prompt_group.py  provider.py  provider_group.py  provider_token.py  required_document.py  running.py  settings.py  stopwords.py  user.py  user_group.py  user_token.py
src/main/: pipeline.py  prompts.py  system_analyst.py
src/models/: agent.py  agent_details.py  document.py  document_template.py  graph.py  group.py  member.py  model.py  node.py  prompt.py  provider.py  provider_token.py  settings.py  user.py
tests/api/: conftest.py  user.py
(+43 files in other folders)
