[tool.poetry]
name = "llm-agents-cunstructor"
version = "0.0.1"
description = ""
authors = ["VladimirMynka <vladimirmynka@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
openai = "^1.52.2"
sqlalchemy = "^2.0.36"
psycopg2-binary = "^2.9.10"
alembic = "^1.13.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
